dz6 add sub/unsub