@@ -18,6 +18,7 @@ public class Main extends Application {
 
 
     public static void main(String[] args) {
+        //--module-path "C:\Program Files\Java\javafx-sdk-11.0.2\lib" --add-modules javafx.controls,javafx.fxml
         launch(args);
     }
 }
